--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ social:
   - name: LinkedIn
     icon: linkedin
     username: M. Alamgir Hossain
-    url: m-alamgir-hossain-60b6a734
+    url: https://www.linkedin.com/profile/m-alamgir-hossain-60b6a734
     desc: Connect with me on LinkedIn
     share: true
 
