--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: Alamgir Hossain
+title: Alamgir Hossain | Blog
 subtitle: "PhD Student, Applied Mathematics and Computation, SFU"
 email: alamgirmath@gmail.com
 name: Alamgir Hossain
@@ -89,7 +89,7 @@ social:
   - name: LinkedIn
     icon: linkedin
     username: M. Alamgir Hossain
-    url: https://www.linkedin.com/profile/m-alamgir-hossain-60b6a734
+    url: https://ca.linkedin.com/in/m-alamgir-hossain-60b6a734
     desc: Connect with me on LinkedIn
     share: true
 
