--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ exclude:
 
 # Site settings
 title: Alamgir Hossain
-subtitle: "PhD Student, Applied Mathematics and Computation, SFU"
+subtitle: "PhD Student, Applied and Computational Mathematics, SFU"
 email: alamgirmath@gmail.com
 name: Alamgir Hossain | Blog
 description: > 
