--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ name: Alamgir Hossain | Blog
 description: > 
   I'm Alamgir Hossain, a PhD student of Applied and Computational Mathematics, SFU.
 baseurl: "/blog/" # the subpath of your site, e.g. /blog/
-url: "https://alamgirh.github.io/blog/" # the base hostname & protocol for your site
+url: "https://alamgirh.github.io" # the base hostname & protocol for your site
 cover: "assets/header_image.jpg"
 logo: "assets/logo.png"
 
